NetBSD Problem Report #50434
From louis@maat.zabrico.com Mon Nov 16 16:08:05 2015
Return-Path: <louis@maat.zabrico.com>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
by mollari.NetBSD.org (Postfix) with ESMTPS id 7C93DA5674
for <gnats-bugs@gnats.NetBSD.org>; Mon, 16 Nov 2015 16:08:05 +0000 (UTC)
Message-Id: <20151116160802.B94ADD14D7@maat.zabrico.com>
Date: Mon, 16 Nov 2015 11:08:02 -0500 (EST)
From: louis@zabrico.com
Reply-To: louis@zabrico.com
To: gnats-bugs@NetBSD.org
Subject: dumpdates corrupted with long file system path names
X-Send-Pr-Version: 3.95
>Number: 50434
>Category: bin
>Synopsis: dumpdates corrupted with long file system path names
>Confidential: no
>Severity: serious
>Priority: high
>Responsible: bin-bug-people
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Mon Nov 16 16:10:00 +0000 2015
>Closed-Date: Mon Feb 15 09:48:54 +0000 2016
>Last-Modified: Mon Feb 15 09:48:54 +0000 2016
>Originator: Louis Guillaume
>Release: NetBSD 7.0
>Organization:
>Environment:
System: NetBSD maat.zabrico.com 7.0 NetBSD 7.0 (GENERIC) #0: Wed Sep 30 19:27:26 EDT 2015 louis@maat.zabrico.com:/usr/obj/sys/arch/i386/compile/GENERIC i386
Architecture: i386
Machine: i386
>Description:
After updating my filesystems to using LVM, I'm having a strange problem with /etc/dumpdates. Here's a recent sampling of dumpdates:
/dev/rraid0a 0 Sat Nov 14 15:58:41 2015
/dev/mapper/rvg0 - Wed Dec 31 18:59:59 1969
/dev/mapper/rvg0 - Wed Dec 31 18:59:59 1969
/dev/mapper/rvg0 - Wed Dec 31 18:59:59 1969
/dev/rraid0a 1 Sun Nov 15 02:45:00 2015
/dev/mapper/rvg0 - Wed Dec 31 18:59:59 1969
/dev/mapper/rvg0-var 1 Sun Nov 15 06:18:47 2015
This results in the following message during a dump:
Unknown intermediate format in /etc/dumpdates, line 1
Seems to be due to the DUMPINFMT constant, where the "name" field is only 16 in length. In /usr/src/include/protocols/dumprestore.h:
#define DUMPINFMT "%16s %c %[^\n]\n" /* inverse for scanf */
>How-To-Repeat:
Dump a filesystem, whose path is longer than 16 bytes. Observe corruption in /etc/dumpdates. This may require an intial dump and then another dump that attempts to read/update the dumpdates file.
>Fix:
Unknown. Possibly change DUMPINFMT as a workaround.
>Release-Note:
>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/50434 CVS commit: src/include/protocols
Date: Mon, 16 Nov 2015 12:09:56 -0500
Module Name: src
Committed By: christos
Date: Mon Nov 16 17:09:56 UTC 2015
Modified Files:
src/include/protocols: dumprestore.h
Log Message:
PR/50434: Louis Guillaume: Bump the in and out formats to 511 (NAME_MAX)
To generate a diff of this commit:
cvs rdiff -u -r1.16 -r1.17 src/include/protocols/dumprestore.h
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
From: Louis Guillaume <louis@zabrico.com>
To: gnats-bugs@NetBSD.org, gnats-admin@netbsd.org, netbsd-bugs@netbsd.org
Cc:
Subject: Re: PR/50434 CVS commit: src/include/protocols
Date: Wed, 30 Dec 2015 11:05:34 -0500
On 11/16/15 12:10 PM, Christos Zoulas wrote:
> The following reply was made to PR bin/50434; it has been noted by GNATS.
>
> From: "Christos Zoulas" <christos@netbsd.org>
> To: gnats-bugs@gnats.NetBSD.org
> Cc:
> Subject: PR/50434 CVS commit: src/include/protocols
> Date: Mon, 16 Nov 2015 12:09:56 -0500
>
> Module Name: src
> Committed By: christos
> Date: Mon Nov 16 17:09:56 UTC 2015
>
> Modified Files:
> src/include/protocols: dumprestore.h
>
> Log Message:
> PR/50434: Louis Guillaume: Bump the in and out formats to 511 (NAME_MAX)
>
>
> To generate a diff of this commit:
> cvs rdiff -u -r1.16 -r1.17 src/include/protocols/dumprestore.h
>
> Please note that diffs are not public domain; they are subject to the
> copyright notices on the relevant files.
>
Thank you Christos!
I've been testing this patch for about just under 6 weeks now and it
works. /etc/dumpdates is a bit less human-readable, but the normal
behavior of dump has been restored.
If this patch can be pulled up to netbsd-7 that would be great. Thanks
again,
Louis
From: christos@zoulas.com (Christos Zoulas)
To: Louis Guillaume <louis@zabrico.com>, gnats-bugs@NetBSD.org,
gnats-admin@netbsd.org, netbsd-bugs@netbsd.org
Cc:
Subject: Re: PR/50434 CVS commit: src/include/protocols
Date: Wed, 30 Dec 2015 12:48:42 -0500
On Dec 30, 11:05am, louis@zabrico.com (Louis Guillaume) wrote:
-- Subject: Re: PR/50434 CVS commit: src/include/protocols
| Thank you Christos!
|
| I've been testing this patch for about just under 6 weeks now and it
| works. /etc/dumpdates is a bit less human-readable, but the normal
| behavior of dump has been restored.
|
| If this patch can be pulled up to netbsd-7 that would be great. Thanks
| again,
You are welcome, I've requested it...
christos
From: "Jeff Rizzo" <riz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/50434 CVS commit: [netbsd-7] src/include/protocols
Date: Tue, 26 Jan 2016 04:53:42 +0000
Module Name: src
Committed By: riz
Date: Tue Jan 26 04:53:42 UTC 2016
Modified Files:
src/include/protocols [netbsd-7]: dumprestore.h
Log Message:
Pull up following revision(s) (requested by christos in ticket #1068):
include/protocols/dumprestore.h: revision 1.17
PR/50434: Louis Guillaume: Bump the in and out formats to 511 (NAME_MAX)
To generate a diff of this commit:
cvs rdiff -u -r1.16 -r1.16.28.1 src/include/protocols/dumprestore.h
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Mon, 15 Feb 2016 09:48:54 +0000
State-Changed-Why:
fixed and pulled up, thanks
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.