Pull up following revision(s) (requested by christos in ticket #1068): 	include/protocols/dumprestore.h: revision 1.17 PR/50434: Louis Guillaume: Bump the in and out formats to 511 (NAME_MAX)